--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -5,7 +5,7 @@
                     ng-click="data.showDelete = !data.showDelete;
                         data.showReorder = false"></button>
 
-            <!--go back one month --> <h1  class="title header-text"> <i ng-click="prevMonth()" class="icon ion-chevron-left header-text"  ></i> {{numberMonth}}<span>/</span>{{numberYear}} <i ng-click="nextMonth()"  class="icon ion-chevron-right header-text "></i></h1>
+            <!--go back one month --> <h1  class="title header-text"> {{numberMonth}}<span>/</span>{{numberYear}}</h1>
             <button class="button button-icon icon ion-ios7-plus" 
                     ng-click="edit()"></button>
 
