--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -149,10 +149,9 @@
 
     </ion-content>
     <ion-footer-bar style="height:150px" class="bar-stable">
-        <button style="margin-top:50px;margin-bottom:50px" class="button  button-assertive col col-33">Expenses: {{model.expTotal}} $</button>
-        <button style="margin-top:50px;margin-bottom:50px" class="button  button-balanced col col-66">Available: {{model.amountLeft}} $</button>
-        <button style="height:0px" class="button button-block button-positive">Daily Allowance: {{model.perDay|number:2}} $</button>
-
+        <button style="margin-top:50px;margin-bottom:50px" class="button  button-assertive col col-50">Expenses: {{model.expTotal}} $</button>
+        <button style="margin-top:50px;margin-bottom:50px" class="button  button-balanced col col-50">Available: {{model.amountLeft}} $</button>
+        <button style="height:0px;" class="button button-positive col">Daily Allowance: {{model.perDay|number:2}} $</button>
     </ion-footer-bar>
     <!-- Modal -->   
     <script id="my-modal.html" type="text/ng-template">
