--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -16,7 +16,7 @@
 
         </div>
     </ion-header-bar>
-    <ion-content>    
+    <ion-content contenth height="200" class="content-scroll">    
         <ion-list  show-delete="data.showDelete" canSwipeItems="true">
             <div class="card">
                 <div class="item item-divider">
