added multiple income sources

--- a/www/templates/modals/item.html
+++ b/www/templates/modals/item.html
@@ -29,6 +29,7 @@
                     <select ng-model="item.type">
                         <option value="recurring">Recurring</option>
                         <option value="fluctuating">Fluctuating</option>
+                        <option value="income">Income</option>
                     </select>
                 </label>
                 <button ng-click="submitModal(item)" type="submit" class="button button-block button-dark">Submit</button>
